feat: Enhance AuthService to support Student and Supervisor profiles, improve registration validation, and add current user retrieval method
feat: Update EmployerFeedbackService to include role validation and improve error handling for feedback submission

feat: Refactor FcmService to support topic-based notifications and improve error logging

feat: Revise LogEntryService to include notification on log submission and enhance log management methods

feat: Improve NotificationService to handle device token management and notification delivery with error handling

feat: Expand ReportService to generate comprehensive student performance reports and export them as PDFs

feat: Enhance SupervisorService to manage student assignments, log reviews, and dashboard statistics

feat: Introduce NotificationDTO for structured notification data transfer

feat: Create EvaluationRepository for managing evaluations related to log entries

feat: Implement VerificationRepository for handling user verification records

feat: Add VerificationService to manage user verifications and integrate with AuthService