@@ -1,26 +1,37 @@
-/*Copyright 2026 Nicholas Kariuki Wambui
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License. */
+/*
+ * Copyright 2026 Nicholas Kariuki Wambui
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.attachlink.security;
 
 import com.attachlink.entity.User;
 import com.attachlink.repository.UserRepository;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.*;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
+/**
+ * Service implementation for loading user-specific data during authentication.
+ * Refined to decouple the JPA Entity from the Security UserDetails.
+ */
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
@@ -30,26 +41,46 @@ public class CustomUserDetailsService implements UserDetailsService {
         this.userRepository = userRepository;
     }
 
+    /**
+     * Locates the user based on the email.
+     * Use @Transactional(readOnly = true) to ensure the session stays open 
+     * if you later decide to use Lazy-loaded Roles or Authorities.
+     */
     @Override
+    @Transactional(readOnly = true)
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        User user = userRepository.findByEmail(email)
+        return userRepository.findByEmail(email)
+                .map(this::createSpringSecurityUser)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
+    }
 
-        // REFINE: Normalize role to ensure it starts with 'ROLE_'
-        String roleName = user.getRole();
-        if (roleName == null) {
-            roleName = "STUDENT"; // Default fallback if needed
-        }
-        
-        roleName = roleName.trim().toUpperCase();
+    /**
+     * Maps the database User entity to a Spring Security UserDetails object.
+     * This separates domain logic from security requirements.
+     */
+    private UserDetails createSpringSecurityUser(User user) {
+        String roleName = Optional.ofNullable(user.getRole())
+                .map(String::trim)
+                .map(String::toUpperCase)
+                .orElse("STUDENT");
+
+        // Ensure the ROLE_ prefix is present for Spring Security hasRole() compatibility
         if (!roleName.startsWith("ROLE_")) {
             roleName = "ROLE_" + roleName;
         }
 
-        return new org.springframework.security.core.userdetails.User(
-                user.getEmail(),
-                user.getPassword(),
-                List.of(new SimpleGrantedAuthority(roleName))
+        List<SimpleGrantedAuthority> authorities = Collections.singletonList(
+                new SimpleGrantedAuthority(roleName)
         );
+
+        return org.springframework.security.core.userdetails.User.builder()
+                .username(user.getEmail())
+                .password(user.getPassword()) // Assumed already BCrypt encoded
+                .authorities(authorities)
+                .accountExpired(false)
+                .accountLocked(false)
+                .credentialsExpired(false)
+                .disabled(false)
+                .build();
     }
 }
