@@ -1,24 +1,27 @@
-/*Copyright 2026 Nicholas Kariuki Wambui
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License. */
+/*
+ * Copyright 2026 Nicholas Kariuki Wambui
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.attachlink.security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
@@ -28,52 +31,68 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Security configuration for the AttachLink application.
+ * Manages JWT filters, CORS, and endpoint authorization rules.
+ */
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http, JwtAuthenticationFilter jwtFilter) throws Exception {
         http
+            // 1. Configure CORS and disable CSRF for Stateless API
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
-            .sessionManagement(session ->
+
+            // 2. Set Session Management to Stateless
+            .sessionManagement(session -> 
                 session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
-            .authorizeHttpRequests(auth -> auth
 
-                // ✅ Public endpoints ONLY
+            // 3. Authorization Rules
+            .authorizeHttpRequests(auth -> auth
+                // Public endpoints
                 .requestMatchers("/api/auth/login", "/api/auth/register").permitAll()
 
-                // ✅ /me must require authentication
-                .requestMatchers("/api/auth/me").authenticated()
-
-                // ✅ Role protected endpoints (supports both ROLE_ and non-ROLE_)
+                // Specific authority-protected endpoints
+                // We use hasAnyAuthority to catch both 'ROLE_X' and 'X' formats for maximum compatibility
                 .requestMatchers("/api/supervisor/**").hasAnyAuthority("SUPERVISOR", "ROLE_SUPERVISOR")
                 .requestMatchers("/api/employer/**").hasAnyAuthority("EMPLOYER", "ROLE_EMPLOYER")
                 .requestMatchers("/api/logs/**").hasAnyAuthority("STUDENT", "ROLE_STUDENT")
 
-                // ✅ Other authenticated endpoints
+                // Common authenticated endpoints
                 .requestMatchers(
-                        "/api/test/**",
-                        "/api/notifications/**",
-                        "/api/analytics/**",
-                        "/api/reports/**",
-                        "/api/fcm/**"
+                    "/api/auth/me",
+                    "/api/test/**",
+                    "/api/notifications/**",
+                    "/api/analytics/**",
+                    "/api/reports/**",
+                    "/api/fcm/**"
                 ).authenticated()
 
+                // Default fallback: any other request must be authenticated
                 .anyRequest().authenticated()
             )
+
+            // 4. Register the JWT Filter before the standard Username/Password Filter
             .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
+    /**
+     * CORS configuration allowing all origins for development.
+     * Note: In production, restricted origins should be used.
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("*")); // dev only
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedOrigins(List.of("*")); 
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(List.of("Authorization")); // Helpful for clients to read the token if sent in headers
         config.setAllowCredentials(false);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -81,6 +100,9 @@ public class SecurityConfig {
         return source;
     }
 
+    /**
+     * Standard AuthenticationManager bean for use in Login services.
+     */
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
